--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 
 {% seo %}
 
+    <link rel="stylesheet" href="{{ '/assets/css/flexboxgrid.css' }}">
     <link rel="stylesheet" href="{{ '/assets/css/voyager.css' }}">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
