--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
       {% endif %}
   </div>
-  <div class="row">
+  <div class="wrapper row">
     <div class="small-10 columns">&copy; 2018 Voyager Foundation </div>
     <div class="small-2 columns" style="text-align: right;">   
       <a href="https://www.meetup.com/Hacking-Economy" ><img src="/assets/img/meetup-logo.png" class="logo-link"></a>
