--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,7 +1,11 @@
 <div class="row mailchimp">
   <!-- Begin MailChimp Signup Form -->
   <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-
+  <style type="text/css">
+    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+      We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+  </style>
   <div id="mc_embed_signup">
   <form action="https://voyagerfoundation.us17.list-manage.com/subscribe/post?u=8d7f8599689475c3ad5d65c60&amp;id=c2a4775135" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div id="mc_embed_signup_scroll">
