# This is a combination of 2 commits.
# This is the 1st commit message:

flexgrid added

# This is the commit message #2:

test #!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,8 @@
-<div id="footer" > 
-  <div class="row">
-      {% if site.github.is_project_page %}
-      <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-      {% endif %}
-  </div>
-  <div class="wrapper row">
-    <div class="small-10 columns">&copy; 2018 Voyager Foundation </div>
-    <div class="small-2 columns" style="text-align: right;">   
-      <a href="https://www.meetup.com/Hacking-Economy" ><img src="/assets/img/meetup-logo.png" class="logo-link"></a>
-      <a href="https://www.facebook.com/Voyager-Foundation" ><img src="/assets/img/fb-logo.png" class="logo-link"></a>
-      <a href="https://www.twitter.com" ><img src="/assets/img/tw-logo.png" class="logo-link"></a>
+<footer> 
+    <div class="box center-block">&copy; 2018 Voyager Foundation </div>
+    <div class="center-block">
+        <a href="https://www.meetup.com/Hacking-Economy" ><img src="/assets/img/meetup-logo.png" class="logo-link"></a>
+        <a href="https://www.facebook.com/Voyager-Foundation" ><img src="/assets/img/fb-logo.png" class="logo-link"></a>
+        <a href="https://www.twitter.com" ><img src="/assets/img/tw-logo.png" class="logo-link"></a>
     </div>
-  </div> 
-</div>
+</footer>
