--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="row header">
+<header>
   <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
   <p class="quote">{{ site.description | default: site.github.project_tagline }}</p>
-</div>
+</header>
