--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,4 +1,5 @@
-<div class="row mailchimp">
+<div class="row mailchimp col-xs-12 center-block" >
+  Subscribe to our email
   <!-- Begin MailChimp Signup Form -->
   <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
   <style type="text/css">
@@ -9,7 +10,7 @@
   <div id="mc_embed_signup">
   <form action="https://voyagerfoundation.us17.list-manage.com/subscribe/post?u=8d7f8599689475c3ad5d65c60&amp;id=c2a4775135" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div id="mc_embed_signup_scroll">
-    <label for="mce-EMAIL">Subscribe to our mailing list</label>
+    
     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8d7f8599689475c3ad5d65c60_c2a4775135" tabindex="-1" value=""></div>
