--- a/assets/css/voyager.scss
+++ b/assets/css/voyager.scss
@@ -1,10 +1,14 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+// @import "{{ site.theme }}";
 
 .quote {
   text-align: center;
+}
+.center-block {
+  text-align: center;
+  padding-bottom: 10px;
 }
 
 .mailchimp {
@@ -13,6 +17,49 @@
 
 // override theme
 body {
+  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-top: 0px;
+  margin-left: 10%;
+  margin-right: 10%;
   padding-top: 5px;
+  color: #727272;
+}
+
+h2 {
+  display: block;
+  font-size: 1.5em;
+  -webkit-margin-before: 0.83em;
+  -webkit-margin-after: 0.83em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  font-weight: bold;
+}
+
+h1, h2, h3 {
+  line-height: 1.1;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #222;
+  margin: 0 0 20px;
+}
+
+h2 {
+  color: #393939;
+}
+
+h1 {
+  font-size: 28px;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  display: block;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
 }
