--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,10 @@
 <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
-
+<script> 
+var host = "voyagerfoundation.org"
+if (window.location.host == host && window.location.protocol != "https:") {
+  window.location.protocol = "https:"
+}
+</script>
 
 {% if site.google_analytics %}
   <script>
