--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
               <p>+44 7534 251167‬</p>
             </div>
 
-            <p class="adress">10 Crooms Hill, London</p>
+            <p class="adress">London</p>
           </div>
         </div>
       </div>
