--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,221 +3,19 @@
   {% include head.html %}
 
   <body>
-    <!--  Start Hero Section  -->
-    <section class="hero">
-      <header>
-        <div class="row">
-          
+    {% include homepage/_hero.html %}
 
-          <nav class="top-bar" data-topbar role="navigation">
-            
-            <!--    Start Logo    -->
-            <ul class="title-area">
-              <li class="name">
-                <a href="#" class="logo">
-                  <h1>voyagerfoundation<span class="tld">.org</span></h1>
-                </a>
-              </li>
-                <span class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></span>
-              </li>
-            </ul>  
-            <!--    End Logo    -->
+    {% include homepage/_areas.html %}
 
-            <!--    Start Navigation Menu    -->
-            <section class="top-bar-section" id="mean_nav">
-              <ul class="right">
-                <li><a href="#community">Community</a></li>
-                <li><a href="#vision">Vision</a></li>
-                <li><a href="#signup">Vononteer</a></li>
-                <li><a href="#collaboration">Collaboration</a></li>
-              </ul>
-            </section>
-            <!--    End Navigation Menu    -->
+    {% include homepage/_quotes.html %}
 
-          </nav>
-        </div>
-      </header>
+    {% include homepage/_testimonials.html %}
 
-      <!--    Start Hero Caption    -->
-      <section class="caption">
-        <div class="row">
-          <h1 class="mean_cap">{{ site.title | default: site.github.repository_name }}</hA>
-          <h2 class="sub_cap">{{ site.description }}</h2>
-          <a href="#" class="btn_details"><span>More Details</span> <img src="assets/img/btn_arrow.png" alt="" src="" class="arrow"></a>
-        </div>
-      </section>
-      <!--    End Hero Caption    -->
+    {% include homepage/_mailchimp_signup.html %}
 
-    </section>
-    <!--  End Hero Section  -->
+    {% include homepage/_map.html %}
 
-
-
-    <!--  Start Services Section  -->
-    <section class="services" id="services">     
-
-      <!--    Start Services Titles    -->
-      <div class="row">        
-        <h1 class="mean_title">Areas of focus</h1>
-        <h2 class="sub_title">To support our mission we are active in multiple areas.</h2> 
-      </div>
-      <!--    End Services Titles    -->
-
-      <!--    Start Services List    -->
-      <div class="row services_list">
-        <div class="small-12 medium-4 large-4 columns">
-          <img src="assets/img/icon2.png" alt="" title="" class="serv_icon"/>
-          <h2 class="title">Community</h2>
-          <p>
-            By running various meetups, hackatons and interviews we will educate people and encourage collaboration.
-          </p>
-        </div>
-
-        <div class="small-12 medium-4 large-4 columns">
-          <img src="assets/img/icon1.png" alt="" title="" class="serv_icon"/>
-          <h2 class="title">Collaboration</h2>
-          <p>We will provide space and tools to allow global collaboration. Community driven research will be the fuel for discussion and projects we support.   </p>
-        </div>
-
-        <div class="small-12 medium-4 large-4 columns">
-          <img src="assets/img/icon3.png" alt="" title="" class="serv_icon"/>
-          <h2 class="title">Support</h2>
-          <p>For selected global impact projects we will provide structured mentorship increase exposure and facilitate project progress. </p>
-        </div>
-      </div>
-      <!--    End Services List    -->
-
-      <!--    Start Button    -->
-      <div class="btn_holder">
-        <a href="#signup" class="btn_fancy">
-          <div class="solid_layer"></div>
-          <div class="border_layer"></div>
-          <div class="text_layer">Get In Touch</div>
-        </a>
-      </div>
-      <!--    End Button    -->
-
-    </section>
-    <!--  End Services Section  -->
-
-
-
-    <!--  Start Quote Section  -->
-    <section class="quote">
-        <blockquote>
-          <p> No. Try not. Do… or do not. There is no try.</p>
-          <hr/>
-          <span class="author">Yoda</span>
-        </blockquote>
-    </section>
-    <!--  End Quote Section  -->
-
-
-
-    <!--  Start Testimonials Section  -->
-    <section class="testimonials" id="testimonials">
-      <div class="row">
-        <div class="slider_container">
-          <div id="carousel">
-            
-            <div class="tesimonial">
-              <img src="assets/img/portraits/filip_with_mic.png" title="" alt="">
-              <span class="name">What & How</span>
-              <p>Voyager brings most time-effective way to bringing value to people and our planet.</p>
-              <span class="author">Filip Jakubowski - Founder</span>
-            </div>
-
-            <div class="tesimonial">
-              <img src="assets/img/icon4.png" title="" alt="">
-              <span class="name">Matt Lee</span>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <span class="author">Matt Lee - Co-Founder</span>
-            </div>
-
-            <div class="tesimonial">
-              <img src="assets/img/icon4.png" title="" alt="">
-              <span class="name">Nina Bajon</span>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <span class="author">Nina Bajon - Co-Founder</span>
-            </div>
-
-          </div>          
-        </div>
-
-        <!--    Start Testimonials Pagination    -->
-        <nav class="pagination">
-          <ul>
-            <li><a href="#">1</a></li>
-            <li><a href="#" class="selected">2</a></li>
-            <li><a href="#">3</a></li>
-          </ul>
-        </nav>
-        <!--    End Testimonials Pagination    -->
-
-      </div>
-    </section>
-    <!--  End Testimonials Section  -->
-
-
-
-    <!--  Start Call To Action Section  -->
-    <section class="cta" id="signup">
-      <div class="row">
-
-        <!--    Start CTA Titles    -->
-        <h1 class="title">Sign for Voyager updates.</h1>
-        <h2 class="sub_title">Keep up to date with Voyager events and collective work.</h2>
-        <!--    End CTA Titles    -->
-      </div>
-
-        <script type="text/javascript">
-          function submitMailchimp(){
-            document.forms["mc-embedded-subscribe-form"].submit();
-          }
-          </script>
-
-        <div class="row display">
-          <div class="columns large-2"><!-- ... --></div>
-          
-          <div id="mc_embed_signup_scroll" class="columns large-2"></div>
-            <form action="https://voyagerfoundation.us17.list-manage.com/subscribe/post?u=8d7f8599689475c3ad5d65c60&amp;id=c2a4775135" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8d7f8599689475c3ad5d65c60_c2a4775135" tabindex="-1" value=""></div>
-            </form>
-          </div>
-
-          <div class="columns large-2"><!-- ... --></div>
-      </div>
-      <div class="row"> 
-        <!--    Start Button    -->
-        <a href="javascript:submitMailchimp()" class="btn_fancy" id="sumbit_mailinglist">
-          <div class="solid_layer"></div>
-          <div class="border_layer"></div>
-          <div class="text_layer">Sign up!</div>
-        </a>
-        <!--    End Button    -->
-      </div>
-      
-    </section>
-    <!--  End Call To Action Section  -->
-
-
-
-    <!--  Start Map Section  -->
-    <section class="map" id="connect">
-
-      <!--    Start Map Shadow    -->
-      <div class="shadow"></div>
-      <!--    End Map Shadow    -->
-
-      <div id="map_container"></div>
-    </section>
-    <!--  End Map Section  -->
-
-
-    {% include footer.html %}
-    
+    {% include footer.html %} 
 
     <!--    Start Back To Top    -->
     <a href="#" class="btn_fancy" id="back_top">
