--- a/_includes/homepage/_hero.html
+++ b/_includes/homepage/_hero.html
@@ -16,6 +16,9 @@
                 </li>
               </ul>  
               <!--    End Logo    -->
+              
+              {% include homepage/_menu.html %}
+
             </nav>
           </div>
         </header>
