--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     </a>
     <!--    End Back To Top    -->
 
-    {% include scripts.html %}
+    {% include homepage/_scripts.html %}
 
   </body>
 </html>
