--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,16 @@
 
     {% include homepage/_hero.html %}
 
+    <!--  Start Vision Section  -->
+      <section class="vision" id="vision">     
+
+          <!--    Start Services Titles    -->
+              {{ content }}
+          <!--    End Services Titles    -->
+      </section>
+
+      <!--  End Vision Section  -->
+
     {% include homepage/_areas.html %}
 
     {% include homepage/_quotes.html %}
