--- a/_includes/homepage/_menu.html
+++ b/_includes/homepage/_menu.html
@@ -3,7 +3,7 @@
     <ul class="right">
       <li><a href="https://www.meetup.com/Hacking-Economy/">Community</a></li>
       <li><a href="#vision">Vision</a></li>
-      <li><a href="#signup">Vononteer</a></li>
+      <li><a href="#signup">Volunteer</a></li>
       <li><a href="#collaboration">Collaboration</a></li>
     </ul>
   </section>
