vision block formatting

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -708,7 +708,7 @@ margin-top: 60px;
 
 .vision{
   background: #ffffff;
-  padding: 140px 0;
+  padding: 100px 10%;
   background: url('../img/cubes.png') repeat;
   text-align: center;
   font-family: "raleway-light", Helvetica, Arial, sans-serif;
