vision -> mission ( menu and div id )

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     {% include homepage/_hero.html %}
 
     <!--  Start Vision Section  -->
-      <section class="vision" id="vision">     
+      <section class="vision" id="mission">     
 
           <!--    Start Services Titles    -->
               {{ content }}
