--- a/_includes/homepage/_menu.html
+++ b/_includes/homepage/_menu.html
@@ -2,7 +2,7 @@
  <section class="top-bar-section" id="mean_nav">
     <ul class="right">
       <li><a href="https://www.meetup.com/Hacking-Economy/">Community</a></li>
-      <li><a href="#vision">Vision</a></li>
+      <li><a href="#mission">Mission</a></li>
       <li><a href="#signup">Volunteer</a></li>
       <li><a href="#collaboration">Collaboration</a></li>
     </ul>
