footer and 1st iteration of subsite

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
         <div class="contact_details right">
           <nav class="social">
             <ul class="no-bullet">
-              <li><a href="https://www.meetup.com/Hacking-Economy" target="_blank">Meetup</a></li>
+              <li><a href="https://www.meetup.com/Voyager" target="_blank">Meetup</a></li>
               <li><a href="https://www.facebook.com/Voyager-Foundation" target="_blank">Facebook</a></li>
               <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
             </ul>
@@ -27,10 +27,8 @@
           <div class="contact">
             <div class="details">
               <p>contact@voyagerfoundation.org</p>
-              <p>+44 7534 251167‬</p>
+              <p class="adress">London</p>
             </div>
-
-            <p class="adress">London</p>
           </div>
         </div>
       </div>
