--- a/assets/css/voyager.scss
+++ b/assets/css/voyager.scss
@@ -65,3 +65,15 @@
   padding-top: 10px;
 }
 
+
+/*    Hero    */
+
+.voyager_top_bar {
+  width: 100% !important;
+  height: 100px !important;
+  }
+
+footer {
+  padding: 10px !important;
+}
+  
