--- a/_includes/homepage/_scripts.html
+++ b/_includes/homepage/_scripts.html
@@ -9,6 +9,8 @@
 <script type="text/javascript" src="assets/js/map.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
 
+<meta name="google-site-verification" content="jdXczsft93jwJfQn2v5K6iVZ71mwODCeNN1IqR6oEOg" />
+
 {% if site.google_analytics %}
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
