--- a/_includes/homepage/_hero.html
+++ b/_includes/homepage/_hero.html
@@ -8,7 +8,7 @@
               <!--    Start Logo    -->
               <ul class="title-area">
                 <li class="name">
-                  <a href="#" class="logo">
+                  <a href="/" class="logo">
                     <h1>voyagerfoundation<span class="tld">.org</span></h1>
                   </a>
                 </li>
