--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,7 +18,7 @@
 
     {% include footer.html %} 
 
-    {% include homepage/_scripts.html %}
+    {% include page/_scripts.html %}
 
   </body>
 </html>
