updates and cleaning

--- a/_includes/page/_top_bar.html
+++ b/_includes/page/_top_bar.html
@@ -7,7 +7,7 @@
               <!--    Start Logo    -->
               <ul class="title-area">
                 <li class="name">
-                  <a href="#" class="logo">
+                  <a href="/" class="logo">
                     <h1>voyagerfoundation<span class="tld">.org</span></h1>
                   </a>
                 </li>
@@ -16,7 +16,7 @@
               </ul>  
               <!--    End Logo    -->
               
-              {% include homepage/_menu.html %}
+              {% include page/_menu.html %}
 
             </nav>
           </div>
