--- a/_includes/homepage/_hero.html
+++ b/_includes/homepage/_hero.html
@@ -28,7 +28,7 @@
           <div class="row">
             <h1 class="mean_cap">{{ site.title | default: site.github.repository_name }}</hA>
             <h2 class="sub_cap">{{ site.description }}</h2>
-            <a href="#" class="btn_details"><span>More Details</span> <img src="assets/img/btn_arrow.png" alt="" src="" class="arrow"></a>
+            <a href="#services" class="btn_details" id="more_details"><span>More Details</span> <img src="assets/img/btn_arrow.png" alt="" src="" class="arrow"></a>
           </div>
         </section>
         <!--    End Hero Caption    -->
