--- a/_includes/page/_menu.html
+++ b/_includes/page/_menu.html
@@ -2,8 +2,8 @@
  <section class="top-bar-section" id="mean_nav">
     <ul class="right">
       <li><a href="/community.html">Community</a></li>
-      <li><a href="#mission">Mission</a></li>
-      <li><a href="#signup">Volunteer</a></li>
+      <li><a href="/#mission">Mission</a></li>
+      <li><a href="/#signup">Volunteer</a></li>
     </ul>
   </section>
   <!--    End Navigation Menu    -->
