--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
     {% include page/_top_bar.html %}
 
     <!--  Start Vision Section  -->
-      <section class="vision" id="mission">     
+      <section class="page-content" id="page-content">     
 
           <!--    Start Services Titles    -->
               {{ content }}
