--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="small-12 medium-4 large-4 columns">
         <div class="copyrights">
           <a class="logo" href="#">
-            <h1>voyagerfoundation<span class="tld">.com</span></h1>
+            <h1>voyagerfoundation<span class="tld">.org</span></h1>
           </a>
           <p>Copyright © 2018 Voyager Foundation.</p>
         </div>
