--- a/assets/css/voyager.scss
+++ b/assets/css/voyager.scss
@@ -76,4 +76,10 @@
 footer {
   padding: 10px !important;
 }
-  
+
+.img_logo {
+  position: relative;
+  margin-top: -40px;
+  width: 200px !important;
+}
+ 
