--- a/_includes/homepage/_hero.html
+++ b/_includes/homepage/_hero.html
@@ -2,14 +2,13 @@
     <section class="hero">
         <header>
           <div class="row">
-        
             <nav class="top-bar" data-topbar role="navigation">
               
               <!--    Start Logo    -->
               <ul class="title-area">
                 <li class="name">
                   <a href="/" class="logo">
-                    <h1>voyagerfoundation<span class="tld">.org</span></h1>
+                    <img src="assets/img/VF_logo_full_white.png" class="img_logo"/>
                   </a>
                 </li>
                   <span class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></span>
