--- a/assets/css/voyager.scss
+++ b/assets/css/voyager.scss
@@ -82,4 +82,14 @@ footer {
   margin-top: -40px;
   width: 200px !important;
 }
+
+.speaker_row {
+  padding-bottom:20px !important;
+}
+
+.speaker-image {
+  max-width: 120px;
+  float: left;
+  padding-right: 20px;
+}
  
