update of booster pod description + WIP

--- a/_includes/page/_top_bar.html
+++ b/_includes/page/_top_bar.html
@@ -1,3 +1,4 @@
+{% include base.html %}
     <section class="voyager_top_bar hero">
         <header>
           <div class="row">
@@ -8,7 +9,7 @@
              <ul class="title-area">
               <li class="name">
                 <a href="/" class="logo">
-                  <img src="../assets/img/VF_logo_full_white.png" class="img_logo"/>
+                  <img src="{{base}}/assets/img/VF_logo_full_white.png" class="img_logo"/>
                 </a>
               </li>
                 <span class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></span>
