--- a/_includes/page/_menu.html
+++ b/_includes/page/_menu.html
@@ -4,7 +4,7 @@
       <li><a href="/boosterpods.html">Booster Pods London</a></li>
       <li><a href="/community.html">Community</a></li>
       <li><a href="/#mission">Mission</a></li>
-      <li><a href="/#signup">Volonteer</a></li>
+      <li><a href="/#signup">Volunteer</a></li>
     </ul>
   </section>
   <!--    End Navigation Menu    -->
