--- a/assets/css/voyager.scss
+++ b/assets/css/voyager.scss
@@ -93,3 +93,12 @@ footer {
   padding-right: 20px;
 }
  
+.project {
+  padding-bottom: 10px;
+}
+
+.voyager_row { 
+  margin-left: 0;
+  margin-right: 0;
+}
+
